--- a/src/main/resources/PathfindPage.fxml
+++ b/src/main/resources/PathfindPage.fxml
@@ -5,6 +5,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -17,11 +18,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.ScrollBar?>
-<?import javafx.scene.control.Slider?>
 <BorderPane fx:id="main_pane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.cs3733d18.teamS.controller.PathfindController">
     <top>
-        <BorderPane fx:id="header_pane" prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #4863A0;" BorderPane.alignment="CENTER">
+        <BorderPane fx:id="header_pane" maxHeight="50.0" prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #4863A0;" BorderPane.alignment="CENTER">
             <left>
                 <Label fx:id="time" style="-fx-text-fill: #ffffff; -fx-font-size: 23;" text="2:30" BorderPane.alignment="CENTER">
                     <BorderPane.margin>
@@ -89,7 +88,7 @@
         </StackPane>
     </center>
     <bottom>
-        <BorderPane fx:id="footer_pane" prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #4863A0;">
+        <BorderPane fx:id="footer_pane" maxHeight="50.0" prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #4863A0;">
             <right>
                 <JFXButton fx:id="toggle_map_btn" buttonType="RAISED" onAction="#toggleMappingType" style="-fx-font-size: 18; -fx-background-color: #B7B8B6;" text="%3d_map" BorderPane.alignment="CENTER">
                     <BorderPane.margin>
