--- a/src/main/resources/NurseHome.fxml
+++ b/src/main/resources/NurseHome.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -21,122 +20,91 @@
         <ExpansionPanel fx:id="exp_panel" prefWidth="1200.0" style="-fx-background-color: #ffffff;" BorderPane.alignment="CENTER" />
     </top>
     <center>
-        <StackPane fx:id="stack_pane" prefHeight="650.0" prefWidth="1200.0" BorderPane.alignment="CENTER">
-            <children>
-                <ImageView fitHeight="669.0" fitWidth="593.0" opacity="0.05" pickOnBounds="true" preserveRatio="true" StackPane.alignment="CENTER">
-                    <image>
-                        <Image url="@images/Brigham_and_Womens_Hospital_logo.svg.png" />
-                    </image>
-                    <StackPane.margin>
-                        <Insets top="30.0" />
-                    </StackPane.margin>
-                </ImageView>
-                <VBox alignment="TOP_CENTER" prefHeight="570.0" prefWidth="1200.0" spacing="50.0">
-                    <StackPane.margin>
-                        <Insets top="40.0" />
-                    </StackPane.margin>
-                </VBox>
-            <GridPane>
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="632.0" minWidth="10.0" prefWidth="628.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="572.0" minWidth="10.0" prefWidth="572.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints maxHeight="350.0" minHeight="10.0" prefHeight="314.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="227.0" minHeight="10.0" prefHeight="89.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="297.0" minHeight="10.0" prefHeight="297.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+      <GridPane alignment="CENTER" prefWidth="983.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="628.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="572.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="314.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="89.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="297.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <StackPane style="-fx-background-color: #dbe9d8;" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
                <children>
-                  <StackPane prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: #dbe9d8;">
-                     <children>
-                        <Rectangle fx:id="syringe_rect" arcHeight="5.0" arcWidth="5.0" fill="#c2d4d8" height="106.0" onMouseClicked="#onSyringeClick" onMouseEntered="#changeColor" onMouseExited="#resetColor" stroke="#dbe9d8" strokeType="INSIDE" width="91.0" />
-                        <ImageView fx:id="syringe_image" onMouseClicked="#onSyringeClick">
-                           <image>
-                              <Image url="@images/epicIcons/icons8-syringe-filled-50.png" />
-                           </image>
-                        </ImageView>
-                     </children>
-                  </StackPane>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Draw Blood" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
-                     <GridPane.margin>
-                        <Insets bottom="40.0" />
-                     </GridPane.margin>
+                  <Rectangle fx:id="syringe_rect" arcHeight="5.0" arcWidth="5.0" fill="#c2d4d8" height="106.0" onMouseClicked="#onSyringeClick" onMouseEntered="#changeColor" onMouseExited="#resetColor" stroke="#dbe9d8" strokeType="INSIDE" width="91.0" />
+                  <ImageView fx:id="syringe_image" onMouseClicked="#onSyringeClick">
+                     <image>
+                        <Image url="@images/epicIcons/icons8-syringe-filled-50.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </StackPane>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Draw Blood" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
+               <GridPane.margin>
+                  <Insets bottom="40.0" />
+               </GridPane.margin>
+               <font>
+                  <Font size="23.0" />
+               </font>
+            </Text>
+            <StackPane style="-fx-background-color: #c2d4d8;" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+               <children>
+                  <Rectangle fx:id="lungs_rect" arcHeight="5.0" arcWidth="5.0" fill="#dbe9d8" height="106.0" onMouseClicked="#onVitalsClick" onMouseEntered="#changeColor" onMouseExited="#resetColor" stroke="#c2d4d8" strokeType="INSIDE" width="91.0" />
+                  <ImageView fx:id="lungs_image" onMouseClicked="#onVitalsClick">
+                     <image>
+                        <Image url="@images/epicIcons/icons8-lungs-filled-50.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </StackPane>
+            <StackPane prefHeight="150.0" prefWidth="1266.0" style="-fx-background-color: #ffffff;" GridPane.columnSpan="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Brigham and Women's | Your Best Service">
                      <font>
                         <Font size="23.0" />
                      </font>
-                  </Text>
-                  <StackPane prefHeight="150.0" prefWidth="582.0" style="-fx-background-color: #c2d4d8;" GridPane.columnIndex="1">
-                     <children>
-                        <Rectangle fx:id="lungs_rect" arcHeight="5.0" arcWidth="5.0" fill="#dbe9d8" height="106.0" onMouseClicked="#onVitalsClick" onMouseEntered="#changeColor" onMouseExited="#resetColor" stroke="#c2d4d8" strokeType="INSIDE" width="91.0" />
-                        <ImageView fx:id="lungs_image" onMouseClicked="#onVitalsClick">
-                           <image>
-                              <Image url="@images/epicIcons/icons8-lungs-filled-50.png" />
-                           </image>
-                        </ImageView>
-                     </children></StackPane>
-                  <StackPane prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: #ffffff;" GridPane.columnSpan="2" GridPane.rowIndex="1">
-                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Brigham and Women's | Your Best Service">
-                           <font>
-                              <Font size="23.0" />
-                           </font>
-                        </Text>
-                     </children>
-                  </StackPane>
-                  <JFXButton fx:id="back_btn" buttonType="RAISED" onAction="#onBackClick" prefHeight="51.0" prefWidth="116.0" style="-fx-background-color: #B7B8B6;" text="%back" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
-                     <GridPane.margin>
-                        <Insets right="40.0" />
-                     </GridPane.margin>
-                     <font>
-                        <Font size="23.0" />
-                     </font>
-                  </JFXButton>
-                  <StackPane prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: #b0aac2;" GridPane.rowIndex="2">
-                     <children>
-                        <Rectangle fx:id="pill_rect" arcHeight="5.0" arcWidth="5.0" fill="#c2d4d8" height="106.0" onMouseClicked="#onPillClick" onMouseEntered="#changeColor" onMouseExited="#resetColor" stroke="#b0aac2" strokeType="INSIDE" width="91.0" />
-                        <ImageView fx:id="pill_image" onMouseClicked="#onPillClick">
-                           <image>
-                              <Image url="@images/epicIcons/icons8-pill-filled-50.png" />
-                           </image>
-                        </ImageView>
-                     </children></StackPane>
-                  <StackPane prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: #dbe9d8;" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                     <children>
-                        <Rectangle fx:id="patient_rect" arcHeight="5.0" arcWidth="5.0" fill="#b0aac2" height="106.0" onMouseClicked="#onPatientClick" onMouseEntered="#changeColor" onMouseExited="#resetColor" stroke="#dbe9d8" strokeType="INSIDE" width="91.0" />
-                        <ImageView fx:id="patient_image" onMouseClicked="#onPatientClick">
-                           <image>
-                              <Image url="@images/epicIcons/icons8-treatment-filled-50.png" />
-                           </image>
-                        </ImageView>
-                     </children></StackPane>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Check Vitals" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
-                     <font>
-                        <Font size="23.0" />
-                     </font>
-                     <GridPane.margin>
-                        <Insets bottom="40.0" />
-                     </GridPane.margin>
-                  </Text>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Administer Medication" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
-                     <font>
-                        <Font size="23.0" />
-                     </font>
-                     <GridPane.margin>
-                        <Insets bottom="40.0" />
-                     </GridPane.margin>
-                  </Text>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="View Patient Data" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
-                     <font>
-                        <Font size="23.0" />
-                     </font>
-                     <GridPane.margin>
-                        <Insets bottom="40.0" />
-                     </GridPane.margin>
                   </Text>
                </children>
-            </GridPane>
-            </children>
-        </StackPane>
+            </StackPane>
+            <JFXButton fx:id="back_btn" buttonType="RAISED" onAction="#onBackClick" prefHeight="51.0" prefWidth="116.0" style="-fx-background-color: #B7B8B6;" text="%back" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets right="40.0" />
+               </GridPane.margin>
+               <font>
+                  <Font size="23.0" />
+               </font>
+            </JFXButton>
+            <StackPane style="-fx-background-color: #b0aac2;" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
+               <children>
+                  <Rectangle fx:id="pill_rect" arcHeight="5.0" arcWidth="5.0" fill="#c2d4d8" height="106.0" onMouseClicked="#onPillClick" onMouseEntered="#changeColor" onMouseExited="#resetColor" stroke="#b0aac2" strokeType="INSIDE" width="91.0" />
+                  <ImageView fx:id="pill_image" onMouseClicked="#onPillClick">
+                     <image>
+                        <Image url="@images/epicIcons/icons8-pill-filled-50.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </StackPane>
+            <StackPane style="-fx-background-color: #dbe9d8;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Check Vitals" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
+               <font>
+                  <Font size="23.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets bottom="40.0" />
+               </GridPane.margin>
+            </Text>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Administer Medication" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+               <font>
+                  <Font size="23.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets bottom="40.0" />
+               </GridPane.margin>
+            </Text>
+         </children>
+      </GridPane>
     </center>
     <bottom>
         <HBox alignment="BOTTOM_LEFT" prefHeight="50.0" prefWidth="273.0" spacing="20.0" BorderPane.alignment="CENTER">
