--- a/src/main/resources/ModifyNodes.fxml
+++ b/src/main/resources/ModifyNodes.fxml
@@ -81,7 +81,7 @@
               </ScrollPane>
                 <StackPane alignment="TOP_CENTER" maxHeight="371.0" maxWidth="240.0" prefHeight="371.0" prefWidth="240.0" StackPane.alignment="TOP_LEFT">
                     <children>
-                        <VBox fx:id="add_node_box" alignment="TOP_CENTER" prefHeight="389.0" prefWidth="242.0" spacing="15.0" style="-fx-background-color: #4863A080; -fx-border-radius: 10 10 10 10; -fx-background-radius: 10 10 10 10;" visible="false" StackPane.alignment="TOP_CENTER">
+                        <VBox fx:id="add_node_box" alignment="TOP_CENTER" prefHeight="389.0" prefWidth="242.0" spacing="15.0" style="-fx-background-color: #a5a5a5CC; -fx-border-radius: 10 10 10 10; -fx-background-radius: 10 10 10 10;" visible="false" StackPane.alignment="TOP_CENTER">
                             <children>
                                 <JFXTextField fx:id="building" alignment="CENTER" focusColor="#4863a0" promptText="%building" style="-fx-background-color: #ffffff;">
                                     <font>
@@ -129,7 +129,7 @@
                         <Insets />
                      </StackPane.margin>
                         </VBox>
-                        <VBox fx:id="add_edge_box" alignment="TOP_CENTER" maxHeight="265.0" spacing="20.0" style="-fx-background-color: #4863A080; -fx-border-radius: 10 10 10 10; -fx-background-radius: 10 10 10 10;" visible="false" StackPane.alignment="TOP_CENTER">
+                        <VBox fx:id="add_edge_box" alignment="TOP_CENTER" maxHeight="265.0" spacing="20.0" style="-fx-background-color: #a5a5a5CC; -fx-border-radius: 10 10 10 10; -fx-background-radius: 10 10 10 10;" visible="false" StackPane.alignment="TOP_CENTER">
                             <children>
                                 <JFXTextField fx:id="location_one" alignment="CENTER" editable="false" focusColor="#4863a0" promptText="%location_one" style="-fx-background-color: #ffffff;">
                                     <font>
@@ -160,7 +160,7 @@
                         <Insets />
                      </StackPane.margin>
                         </VBox>
-                        <VBox fx:id="delete_loc_box" alignment="TOP_CENTER" maxHeight="190.0" spacing="20.0" style="-fx-background-color: #4863A080; -fx-border-radius: 10 10 10 10; -fx-background-radius: 10 10 10 10;" visible="false" StackPane.alignment="TOP_CENTER">
+                        <VBox fx:id="delete_loc_box" alignment="TOP_CENTER" maxHeight="190.0" spacing="20.0" style="-fx-background-color: #a5a5a5CC; -fx-border-radius: 10 10 10 10; -fx-background-radius: 10 10 10 10;" visible="false" StackPane.alignment="TOP_CENTER">
                             <children>
                                 <JFXTextField fx:id="location_to_delete" alignment="CENTER" editable="false" focusColor="#4863a0" promptText="%location_one" style="-fx-background-color: #ffffff;">
                                     <font>
@@ -183,7 +183,7 @@
                         <Insets />
                      </StackPane.margin>
                         </VBox>
-                  <VBox fx:id="delete_edge_box" alignment="TOP_CENTER" maxHeight="125.0" spacing="20.0" style="-fx-background-color: #4863A080; -fx-border-radius: 10 10 10 10; -fx-background-radius: 10 10 10 10;" visible="false" StackPane.alignment="TOP_CENTER">
+                  <VBox fx:id="delete_edge_box" alignment="TOP_CENTER" maxHeight="125.0" spacing="20.0" style="-fx-background-color: #a5a5a5CC; -fx-border-radius: 10 10 10 10; -fx-background-radius: 10 10 10 10;" visible="false" StackPane.alignment="TOP_CENTER">
                      <children>
                         <JFXButton fx:id="delete_edge" buttonType="RAISED" onAction="#onDeleteEdge" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="Delete Edges">
                            <VBox.margin>
@@ -195,7 +195,7 @@
                         <Insets />
                      </StackPane.margin>
                   </VBox>
-                  <VBox fx:id="batch_disable_box" alignment="TOP_CENTER" maxHeight="125.0" spacing="20.0" style="-fx-background-color: #4863A080; -fx-border-radius: 10 10 10 10; -fx-background-radius: 10 10 10 10;" visible="false" StackPane.alignment="TOP_CENTER">
+                  <VBox fx:id="batch_disable_box" alignment="TOP_CENTER" maxHeight="125.0" spacing="20.0" style="-fx-background-color: #a5a5a5CC; -fx-border-radius: 10 10 10 10; -fx-background-radius: 10 10 10 10;" visible="false" StackPane.alignment="TOP_CENTER">
                       <children>
                           <JFXButton fx:id="disable_selection" buttonType="RAISED" onAction="#disableNodesInPolygon" style="-fx-background-color: #B7B8B6;" text="%disable_location">
                               <font>
@@ -215,7 +215,7 @@
                         <Insets />
                      </StackPane.margin>
                   </VBox>
-                        <VBox fx:id="modify_loc_box" alignment="TOP_CENTER" maxHeight="125.0" spacing="20.0" style="-fx-background-color: #4863A080; -fx-border-radius: 10 10 10 10; -fx-background-radius: 10 10 10 10;" visible="false" StackPane.alignment="TOP_CENTER">
+                        <VBox fx:id="modify_loc_box" alignment="TOP_CENTER" maxHeight="125.0" spacing="20.0" style="-fx-background-color: #a5a5a5CC; -fx-border-radius: 10 10 10 10; -fx-background-radius: 10 10 10 10;" visible="false" StackPane.alignment="TOP_CENTER">
                             <children>
                                 <JFXButton fx:id="confirm_new_loc" buttonType="RAISED" onAction="#onConfirmMove" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="Confirm">
                            <VBox.margin>
@@ -227,7 +227,7 @@
                         <Insets />
                      </StackPane.margin>
                         </VBox>
-                  <VBox fx:id="modify_info_box" alignment="TOP_CENTER" maxHeight="400.0" prefHeight="389.0" prefWidth="242.0" spacing="15.0" style="-fx-background-color: #4863A080; -fx-border-radius: 10 10 10 10; -fx-background-radius: 10 10 10 10;" visible="false" StackPane.alignment="TOP_CENTER">
+                  <VBox fx:id="modify_info_box" alignment="TOP_CENTER" maxHeight="400.0" prefHeight="389.0" prefWidth="242.0" spacing="15.0" style="-fx-background-color: #a5a5a5CC; -fx-border-radius: 10 10 10 10; -fx-background-radius: 10 10 10 10;" visible="false" StackPane.alignment="TOP_CENTER">
                      <children>
                         <JFXTextField fx:id="building_change" alignment="CENTER" focusColor="#4863a0" promptText="%building" style="-fx-background-color: #ffffff;">
                            <font>
@@ -284,7 +284,7 @@
                   <Insets left="10.0" top="10.0" />
                </StackPane.margin>
                 </StackPane>
-            <HBox fx:id="node_or_edge" alignment="TOP_CENTER" maxHeight="62.0" maxWidth="160.0" prefHeight="62.0" prefWidth="121.0" style="-fx-background-color: #4863A080; -fx-border-radius: 0 0 10 10; -fx-background-radius: 0 0 10 10;" visible="false" StackPane.alignment="TOP_CENTER">
+            <HBox fx:id="node_or_edge" alignment="TOP_CENTER" maxHeight="62.0" maxWidth="160.0" prefHeight="62.0" prefWidth="121.0" style="-fx-background-color: #a5a5a5CC; -fx-border-radius: 0 0 10 10; -fx-background-radius: 0 0 10 10;" visible="false" StackPane.alignment="TOP_CENTER">
                <children>
                   <Label alignment="CENTER" contentDisplay="CENTER" text="Node">
                      <font>
@@ -307,7 +307,7 @@
                   <Insets left="-55.0" />
                </StackPane.margin>
             </HBox>
-            <HBox alignment="BOTTOM_CENTER" maxHeight="50.0" maxWidth="100.0" prefHeight="100.0" prefWidth="200.0" spacing="10.0" style="-fx-background-color: #4863A080; -fx-border-radius: 10 10 10 10; -fx-background-radius: 10 10 10 10;" StackPane.alignment="BOTTOM_CENTER">
+            <HBox alignment="BOTTOM_CENTER" maxHeight="50.0" maxWidth="100.0" prefHeight="100.0" prefWidth="200.0" spacing="10.0" style="-fx-background-color: #a5a5a5CC; -fx-border-radius: 10 10 10 10; -fx-background-radius: 10 10 10 10;" StackPane.alignment="BOTTOM_CENTER">
                <children>
                   <ImageView fx:id="view_btn" fitHeight="80.0" fitWidth="80.0" onMouseClicked="#onViewIconClick" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -347,10 +347,6 @@
                   <Insets bottom="20.0" />
                </StackPane.margin>
             </HBox>
-                <JFXComboBox fx:id="choose_floor" focusColor="#4863a0" promptText="%choose_floor" style="-fx-font-size: 23; -fx-text-color: #ffffff;" StackPane.alignment="BOTTOM_RIGHT">
-               <StackPane.margin>
-                  <Insets bottom="18.0" left="10.0" />
-               </StackPane.margin></JFXComboBox>
             <GridPane fx:id="button_pane" alignment="CENTER_RIGHT" maxHeight="400.0" maxWidth="100.0" StackPane.alignment="CENTER_RIGHT">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
@@ -373,14 +369,14 @@
                   <Insets right="20.0" />
                </StackPane.margin>
             </GridPane>
-            <HBox fx:id="predictor_type" alignment="CENTER" maxHeight="50.0" maxWidth="200.0" style="-fx-background-color: #4863A080; -fx-border-radius: 10 10 10 10; -fx-background-radius: 10 10 10 10;" visible="false" StackPane.alignment="BOTTOM_LEFT">
+            <HBox fx:id="predictor_type" alignment="CENTER" maxHeight="50.0" maxWidth="200.0" style="-fx-background-color: #a5a5a5CC; -fx-border-radius: 10 10 10 10; -fx-background-radius: 10 10 10 10;" visible="false" StackPane.alignment="BOTTOM_LEFT">
                <children>
-                  <Label text="Smart" textFill="WHITE">
+                  <Label text="Smart">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
-                <JFXToggleButton fx:id="toggleNN" alignment="BOTTOM_CENTER" onAction="#onNNToggle" text="Math" textFill="WHITE" toggleColor="#fafafa" toggleLineColor="#999999">
+                <JFXToggleButton fx:id="toggleNN" alignment="BOTTOM_CENTER" onAction="#onNNToggle" text="Math" toggleColor="#fafafa" toggleLineColor="#999999">
                     <font>
                         <Font size="18.0" />
                     </font>
